Implemented some UI hooks for the notifications.

--- a/public/_/css/style.css
+++ b/public/_/css/style.css
@@ -600,7 +600,7 @@ footer {
 
 /* NOTIFICATIONS */
 #notification {
-  display: none;
+  display: block;
   position: absolute;
   z-index: 101;
   top: 0;
