Removed some notification test code.

--- a/views/notification.ejs
+++ b/views/notification.ejs
@@ -1,4 +1,4 @@
-<div id="notification">
+<!--<div id="notification">
   <section id="approve-collaborators">
     Promote to collaborator? 
       <article>
@@ -11,4 +11,4 @@
         [Username] <a href="#" class="approve">Approve</a> <a href="#" class="dismiss">Dismiss</a>
       </article>
   </section>
-</div>
+</div>-->
