--- a/views/nav.ejs
+++ b/views/nav.ejs
@@ -5,7 +5,7 @@
                 <li class="create-room"><a href="/stages/new" title="Create a Stage and Start Coding">Create a Stage</a></li>
             <% } %>
             <% if(!everyauth.loggedIn) { %>
-                <li class="login"><a href="/auth/github" title="Login through GitHub">Login through GitHub</a></li>
+                <li class="login"><a href="/auth/github" title="Login with GitHub">Login with GitHub</a></li>
             <% } %>
             <% if(everyauth.loggedIn) { %>
                 <li class="logout"><a href="/logout" title="Logout of Coding Stage">Logout</a></li>
