--- a/public/_/css/style.css
+++ b/public/_/css/style.css
@@ -124,6 +124,12 @@ header nav li a {
     border-top: 1px solid rgba(29, 41, 41, 0.75);
     color: #eef2f2; }
 
+header nav li.login a {
+  padding-right: 25px;
+  background-image: url(../img/logos/github-mini.png);
+  background-position: 97% 48%;
+  background-repeat: no-repeat; }
+
 /* LEADER */
 #leader {
   position: relative;
@@ -691,9 +697,9 @@ footer {
   border-radius: 10px;
   -webkit-box-shadow: 0 0 20px rgba(29, 41, 41, 0.5); }
   .jqModal .close {
-    position: relative;
-    left: 20px;
-    top: -15px; }
+    position: absolute;
+    right: 15px;
+    top: 15px; }
 
 #git-modal {
   padding: 20px;
