Added contributor flow

--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -132,11 +132,14 @@
 	</section>
 	
 	<section id="attendees">
-		    
+        <% if(everyauth.loggedIn) { %>
+                  <% if(!isContributor(contributors, everyauth)) { %>
 		    <a href="#" class="button" id="contribute">I'd like to contribute</a>
-		    
+                  <% } %> 
 		    <a href="#" class="button" id="control">Ask for control</a>
-		    
+                    <% } else { %>
+		    <a href="/auth/github" class="button" >Log In to Contribute</a>
+                    <% } %> 
         <h1>Who's Watching  <!--<mark>(<span id="watchers-count"><%= stage.watchers.length %></span>)</mark>--></h1>
 		
 		<ol>
