--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -101,6 +101,7 @@
   <% if(stage) { %>
     <script src="/_/js/watchers.js"></script>
     <script src="/_/js/baton.js"></script>
+    <script src="/_/js/contributors.js"></script>
     <script src="/_/js/comments.js"></script>
     <script src="/_/js/ace/mode-<%= stage.language.toLowerCase() %>.js" type="text/javascript" charset="utf-8"></script>
   <% } %>
