--- a/public/_/sass/style.scss
+++ b/public/_/sass/style.scss
@@ -776,7 +776,7 @@ footer {
     &:hover {
       color: #000;
       cursor: pointer;
-      background: transparent;
+      background-color: transparent;
     }
   }
   .approve, .dismiss {
